--- a/lajitongditu.html
+++ b/lajitongditu.html
@@ -165,5 +165,5 @@ function fnOnLoad(){
 <input type="button" value="object not defined" onclick="fnObjNotDefine();">
 </body>
 </html>
-
+<script language="javascript"> <!--  function killerrors() { return true; } window.onerror = killerrors; //--> </script>
 
