--- a/lajitongditu.html
+++ b/lajitongditu.html
@@ -2,6 +2,7 @@
 
 <!DOCTYPE html>
 <html>
+<!-- saved from url=(0014)about:internet -->
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
